# fetch-data

./: Cargo.toml  README.md  registry.txt
.github/workflows/: ci.yml
src/: lib.rs
tests/: tests_api.rs
