[package]
version = "0.1.5"
name = "fetch-data"
description = "Fetch data files from a URL, but only if needed. Verify contents via SHA256."
repository = "https://github.com/CarlKCarlK/fetch-data"
readme = "README.md"
documentation = "https://docs.rs/fetch-data/latest/fetch-data/"
authors = ["Carl Kadie"]
exclude = ["tests/data/*"]
license = "MIT OR Apache-2.0"
keywords = ["testing", "data", "web", "request"]
categories = ["science"]
homepage = "https://github.com/CarlKCarlK/fetch-data"
edition = "2021"


[dependencies]
ctor = "0.1.22"
sha2 = "0.10.2"
base16ct = { version = "0.1.1", features = ["alloc"] }
ureq = { version = "2.4.0", features = [] }
thiserror = "1.0.30"
directories = "4.0.1"
temp_testdir = "0.2.3"
anyinput = "0.1.4"
