[package]
version = "0.1.6"
name = "fetch-data"
description = "Fetch data files from a URL, but only if needed. Verify contents via SHA256."
repository = "https://github.com/CarlKCarlK/fetch-data"
readme = "README.md"
documentation = "https://docs.rs/fetch-data/latest/fetch-data/"
authors = ["Carl Kadie"]
exclude = ["tests/data/*"]
license = "MIT OR Apache-2.0"
keywords = ["testing", "data", "web", "request"]
categories = ["science"]
homepage = "https://github.com/CarlKCarlK/fetch-data"
edition = "2021"


[dependencies]
getrandom = {version="0.2.15", features=["js"] }
ctor = "0.2.8"
sha2 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
ureq = { version = "2.9.7", features = [] }
thiserror = "1.0.61"
directories = "5.0.1"
temp_testdir = "0.2.3"
anyinput = "0.1.6"
